# vgi-scikit-bio

./: .dockerignore  .gitignore  .vgi-review-cache.json  .vgi-sim-cache.json  CLAUDE.md  Dockerfile  Makefile  README.md  SUPPORT.md  conftest.py  docker-entrypoint.sh  fly.toml  pyproject.toml  scikit_bio_worker.py  serve.py
.github/workflows/: ci.yml  docker-publish.yml
ci/: README.md  check-version.sh  run-integration.sh
test/sql/: skbio_alignment.test  skbio_catalog.test  skbio_diversity.test  skbio_sequence.test  skbio_stats.test  skbio_tree.test
tests/: harness.py  test_alignment.py  test_diversity.py  test_docstrings.py  test_kmers.py  test_phylo.py  test_sequence.py  test_stats.py  test_tree.py  test_worker.py
vgi_scikit_bio/: __init__.py  alignment.py  buffering.py  composition.py  distance_stats.py  distance_utils.py  diversity.py  kmers.py  ordination.py  phylo.py  schema_utils.py  sequence.py  tree.py  worker.py
